sumo/tests/sumo/output/e3/errors/file_empty/errors.sumo
Error: Attribute 'file' in definition of e3Detector '4/1to3/1' is empty.
Quitting (on error).
